fix Checkstyle issues